Closed Bug 1766197 Opened 2 years ago Closed 2 years ago

[wayland] tooltip doesn't appear near the bottom of screen

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 101
Desktop
Linux
defect

Tracking

()

VERIFIED FIXED
107 Branch
Tracking Status
firefox107 --- verified
firefox108 --- verified

People

(Reporter: lilydjwg, Assigned: stransky)

References

(Blocks 2 open bugs)

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:101.0) Gecko/20100101 Firefox/101.0

Steps to reproduce:

Actual results:

It flickers once but no tooltip is shown. It seems that it tries to show but there is no space and then it disappears soon.

Expected results:

The tooltip should find another place to appear.

It happens on all Wayland sessions of GNOME, KDE and wayfire (wlroots). On Xwayland it doesn't have this issue.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Priority: -- → P3

Yes, I can reproduce that too.

It's because we create a tooltip under cursor (after move-to-rect), it gets "OnEnterNotifyEvent" and we close the tooltip again.

This is a lot more noticeable now that hover tooltips have been recently added to the picture-in-picture playback controls (Bug 1772339).

Status: UNCONFIRMED → NEW
Depends on: 1772339
Ever confirmed: true

We don't want to get enter/leave events for tooltip so disable it.

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/55926acc8de0
[Wayland] Don't set input region to tooltips r=emilio
https://hg.mozilla.org/integration/autoland/rev/7882b9b0684c
[Wayland] Update move-to-rect anchor for tooltips according to nsMenuPopupFrame::SetPopupPosition()/X11 r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
Blocks: 1794576
Regressions: 1794613
Flags: qe-verify+

Using the steps in comment 0, this issue could be reproduced in Release v106.0.1 on Ubuntu 22, after force-opening it with Wayland Window Protocol on gnome Desktop Environment. This issue only occurs when the button or link that also has a tooltip is much too close to the bottom of the screen.

I've confirmed the fix on Beta v107.0b4 and Nightly v108.0a1.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
Regressions: 1800742
Regressions: 1832370
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: