Bug 1766197 [Wayland] Update move-to-rect anchor for tooltips according to nsMenuPopupFrame::SetPopupPosition()/X11 r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D158566